[package]
name = "ere-server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
bincode = { workspace = true, features = ["alloc", "serde"] }
prost.workspace = true
serde = { workspace = true, features = ["derive"] }
thiserror.workspace = true
tokio.workspace = true
twirp.workspace = true

# Server
clap = { workspace = true, features = ["derive"], optional = true }
tower-http = { workspace = true, features = ["catch-panic"], optional = true }
tracing = { workspace = true, optional = true }
tracing-subscriber = { workspace = true, features = ["env-filter"], optional = true }

# Local dependencies
ere-airbender = { workspace = true, features = ["zkvm"], optional = true }
ere-openvm = { workspace = true, features = ["zkvm"], optional = true }
ere-risc0 = { workspace = true, features = ["zkvm"], optional = true }
ere-sp1 = { workspace = true, features = ["zkvm"], optional = true }
ere-zisk = { workspace = true, features = ["zkvm"], optional = true }
ere-zkvm-interface = { workspace = true, features = ["clap"] }

[dev-dependencies]
prost-build.workspace = true
tempfile.workspace = true
twirp-build.workspace = true

[lints]
workspace = true

[features]
default = ["client"]
client = []
server = ["dep:clap", "dep:tower-http", "dep:tracing", "dep:tracing-subscriber", "tokio/macros", "tokio/rt-multi-thread", "tokio/signal"]

# zkVM
airbender = ["dep:ere-airbender", "server"]
openvm = ["dep:ere-openvm", "server"]
risc0 = ["dep:ere-risc0", "server"]
sp1 = ["dep:ere-sp1", "server"]
zisk = ["dep:ere-zisk", "server"]

# Cuda
cuda = ["ere-openvm?/cuda", "ere-zisk?/cuda"]
