[package]
name = "ere-server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
bincode = { workspace = true, features = ["alloc", "serde"] }
opentelemetry = { workspace = true, optional = true }
prost.workspace = true
serde = { workspace = true, features = ["derive"] }
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-opentelemetry = { workspace = true, optional = true }
twirp.workspace = true

# Server
clap = { workspace = true, features = ["derive"], optional = true }
opentelemetry-otlp = { workspace = true, features = ["grpc-tonic"], optional = true }
opentelemetry_sdk = { workspace = true, features = ["rt-tokio"], optional = true }
tower-http = { workspace = true, features = ["catch-panic", "trace"], optional = true }
tracing-subscriber = { workspace = true, features = ["env-filter"], optional = true }

# Local dependencies
ere-airbender = { workspace = true, features = ["zkvm"], optional = true }
ere-openvm = { workspace = true, features = ["zkvm"], optional = true }
ere-risc0 = { workspace = true, features = ["zkvm"], optional = true }
ere-sp1 = { workspace = true, features = ["zkvm"], optional = true }
ere-zisk = { workspace = true, features = ["zkvm"], optional = true }
ere-verifier-core.workspace = true
ere-zkvm-interface = { workspace = true, features = ["clap"] }

[dev-dependencies]
prost-build.workspace = true
tempfile.workspace = true
twirp-build.workspace = true

[lints]
workspace = true

[features]
client = []
default = ["client"]
otel = ["dep:opentelemetry", "dep:tracing-opentelemetry"]
server = [
    "otel",
    "dep:clap",
    "dep:opentelemetry-otlp",
    "dep:opentelemetry_sdk",
    "dep:tower-http",
    "dep:tracing-subscriber",
    "tokio/macros",
    "tokio/rt-multi-thread",
    "tokio/signal",
]

# zkVM
airbender = ["dep:ere-airbender", "server"]
openvm = ["dep:ere-openvm", "server"]
risc0 = ["dep:ere-risc0", "server"]
sp1 = ["dep:ere-sp1", "server"]
zisk = ["dep:ere-zisk", "server"]

# Cuda
cuda = ["ere-openvm?/cuda", "ere-zisk?/cuda"]
