[package]
name = "ere-platform-airbender"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
# Airbender dependencies
airbender-sdk.workspace = true

# Local dependencies
ere-platform-core.workspace = true

[features]
default = ["allocator-talc"]
std = ["airbender-sdk/std"]
crypto = ["airbender-sdk/crypto"]
allocator-bump = ["airbender-sdk/allocator-bump"]
allocator-talc = ["airbender-sdk/allocator-talc"]
allocator-custom = ["airbender-sdk/allocator-custom"]

[lints]
workspace = true
