[package]
name = "ere-prover-airbender"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
sha3.workspace = true
tempfile.workspace = true
thiserror.workspace = true

# Airbender dependencies
# FIXME: Enable feature security_100 if airbender-host disables the default features of
#        execution_utils, which includes execution_utils/security_80
airbender-host.workspace = true
# FIXME: Remove the following deps when program vk generation is available in airbender-host
#        without GPU requirement.
airbender-execution-utils = { workspace = true, features = ["verifier_binaries"] }
airbender-riscv-transpiler.workspace = true

# Local dependencies
ere-compiler-core.workspace = true
ere-prover-core.workspace = true
ere-verifier-airbender.workspace = true

[dev-dependencies]
ere-compiler-airbender.workspace = true
ere-util-test = { workspace = true, features = ["host"] }

[features]
default = []
cuda = ["airbender-host/gpu-prover"]

[lints]
workspace = true
