[package]
name = "ere-prover-airbender"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
sha3.workspace = true
tempfile.workspace = true
thiserror.workspace = true

# Airbender dependencies
airbender-host.workspace = true
airbender-execution-utils.workspace = true
airbender-riscv-transpiler.workspace = true

# Local dependencies
ere-compiler-core.workspace = true
ere-prover-core.workspace = true
ere-verifier-airbender.workspace = true

[dev-dependencies]
ere-compiler-airbender.workspace = true
ere-util-test = { workspace = true, features = ["host"] }

[features]
default = []
cuda = ["airbender-host/gpu-prover"]

[lints]
workspace = true
