[package]
name = "ere-prover-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
auto_impl.workspace = true
bincode = { workspace = true, features = ["alloc", "serde"] }
clap = { workspace = true, features = ["derive"], optional = true }
indexmap = { workspace = true, features = ["serde"] }
serde = { workspace = true, features = ["derive"] }
strum = { workspace = true, features = ["derive"] }
thiserror.workspace = true

# Local dependencies
ere-codec.workspace = true
ere-verifier-core.workspace = true

[dev-dependencies]
bincode = { workspace = true, features = ["alloc", "serde"] }
serde_json.workspace = true
serde_yaml.workspace = true
toml.workspace = true

[lints]
workspace = true

[features]
default = []
clap = ["dep:clap"]
tokio = ["ere-verifier-core/tokio"]
