[package]
name = "ere-prover-zisk"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
blake3.workspace = true
futures-util.workspace = true
http.workspace = true
mpi.workspace = true
parking_lot.workspace = true
tempfile.workspace = true
thiserror.workspace = true
tonic.workspace = true
tracing.workspace = true
uuid = { workspace = true, features = ["v4"] }

# Local dependencies
ere-compiler-core.workspace = true
ere-verifier-zisk.workspace = true
ere-prover-core = { workspace = true, features = ["tokio"] }

# Zisk dependencies
proofman-common.workspace = true
proofman-fields.workspace = true
proofman-starks-lib-c.workspace = true
zisk-core.workspace = true
zisk-rom-setup.workspace = true
zisk-sdk = { workspace = true, features = ["disable_distributed"] }
ziskemu.workspace = true
zisk-distributed-grpc-api.workspace = true

[dev-dependencies]
ere-compiler-zisk.workspace = true
ere-util-test = { workspace = true, features = ["host"] }

[features]
cuda = ["zisk-sdk/gpu"]

[lints]
workspace = true
