[package]
name = "ere-prover-zisk"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
once_cell.workspace = true
parking_lot.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["time"] }
tracing.workspace = true

# ZisK dependencies
zisk-common.workspace = true
zisk-core.workspace = true
zisk-prover-backend.workspace = true
ziskemu.workspace = true

# Local dependencies
ere-cluster-client-zisk.workspace = true
ere-compiler-core.workspace = true
ere-prover-core.workspace = true
ere-util-tokio.workspace = true
ere-verifier-zisk.workspace = true

[dev-dependencies]
ere-compiler-zisk.workspace = true
ere-util-test = { workspace = true, features = ["host"] }
tempfile.workspace = true

[features]
default = []
cuda = []

[lints]
workspace = true
