[package]
name = "ere-server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true }
bincode = { workspace = true, features = ["alloc", "serde"] }
clap = { workspace = true, features = ["derive"] }
metrics = { workspace = true }
metrics-exporter-prometheus = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry-otlp = { workspace = true, features = ["grpc-tonic"] }
opentelemetry_sdk = { workspace = true, features = ["rt-tokio"] }
pin-project-lite = { workspace = true }
reqwest = { workspace = true, features = ["rustls-tls"] }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "signal"] }
tower = { workspace = true }
tower-http = { workspace = true, features = ["catch-panic", "trace"] }
tracing = { workspace = true }
tracing-opentelemetry = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
twirp = { workspace = true }

# Local dependencies
ere-compiler-core = { workspace = true }
ere-prover-airbender = { workspace = true, optional = true }
ere-prover-core = { workspace = true, features = ["clap"] }
ere-prover-openvm = { workspace = true, optional = true }
ere-prover-risc0 = { workspace = true, optional = true }
ere-prover-sp1 = { workspace = true, optional = true }
ere-prover-zisk = { workspace = true, optional = true }
ere-server-api.workspace = true

[features]
default = []

# zkVM
airbender = ["dep:ere-prover-airbender"]
openvm = ["dep:ere-prover-openvm"]
risc0 = ["dep:ere-prover-risc0"]
sp1 = ["dep:ere-prover-sp1"]
zisk = ["dep:ere-prover-zisk"]

# Cuda
cuda = [
    "ere-prover-airbender?/cuda",
    "ere-prover-openvm?/cuda",
    "ere-prover-risc0?/cuda",
    "ere-prover-sp1?/cuda",
    "ere-prover-zisk?/cuda",
]

[[bin]]
name = "ere-server"
path = "src/main.rs"

[lints]
workspace = true
