[package]
name = "ere-server-client"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
bincode = { workspace = true, features = ["alloc", "serde"] }
opentelemetry = { workspace = true, optional = true }
thiserror.workspace = true
tokio.workspace = true
tracing = { workspace = true, optional = true }
tracing-opentelemetry = { workspace = true, optional = true }
twirp.workspace = true

# Local dependencies
ere-prover-core.workspace = true
ere-server-api.workspace = true

[features]
default = []
otel = ["dep:opentelemetry", "dep:tracing", "dep:tracing-opentelemetry"]

[lints]
workspace = true
