[package]
name = "ere-verifier-airbender"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
bincode = { workspace = true, features = ["alloc", "serde"] }
serde = { workspace = true, features = ["derive"] }
thiserror.workspace = true

# Airbender dependencies
# FIXME: Remove feature `prover` when upstream fixes the un-gated import of `prover_examples`.
airbender-execution-utils = { workspace = true, features = ["prover"] }
airbender-full-statement-verifier.workspace = true
airbender-verifier-common.workspace = true

# Local dependencies
ere-verifier-core.workspace = true

[dev-dependencies]
airbender-execution-utils = { workspace = true, features = ["verifier_binaries"] }
airbender-riscv-transpiler.workspace = true

[build-dependencies]
ere-util-build.workspace = true

[lints]
workspace = true
